terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_instance" "monitor_app" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  region                 = var.aws_region
  associate_public_ip_address = true

  vpc_security_group_ids = [aws_security_group.allow_web.id]

  user_data = file("install_docker.sh")

  tags = {
    Name = "monitor-app-instance"
  }
}

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic_v2"
  description = "Allow port 22 and 5000"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Flask Port"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
